relinked to raw github files

--- a/casting-calls/casting-calls.html
+++ b/casting-calls/casting-calls.html
@@ -1,14 +1,13 @@
 <html>
     <head>
-        <link rel="stylesheet" href="common.css">
+        <link rel="stylesheet" href="https://raw.githubusercontent.com/de-Mote/mtvcastingcalls/master/casting-calls/common.css">
         <link rel="stylesheet" href="http://shared.mtv.com/site/mtv/0.2/bundles/partners/fonts_css_head.php">
-        <link rel="stylesheet" href="icons.css">
     </head>
     <body>
         <section class="header">
             <div id="space"></div>
             <nav>
-                <a href="http://www.mtv.com"><img class="mtv-logo" src="55661e5281b211231d4309cc_MTV_regular.svg"></a>
+                <a href="http://www.mtv.com"><img class="mtv-logo" src="https://raw.githubusercontent.com/de-Mote/mtvcastingcalls/master/casting-calls/55661e5281b211231d4309cc_MTV_regular.svg"></a>
                 <div class="title">shows blog</div>
                 <!--<div class="dropdown"></div>-->
             </nav>
@@ -87,7 +86,7 @@
         <section>
             <footer>
                 <div id="blog-footer">
-                    <a href="http://www.mtv.com"><img class="mtv-logo-footer" src="55661e5281b211231d4309cc_MTV_regular.svg"></a>
+                    <a href="http://www.mtv.com"><img class="mtv-logo-footer" src="https://raw.githubusercontent.com/de-Mote/mtvcastingcalls/master/casting-calls/55661e5281b211231d4309cc_MTV_regular.svg"></a>
                     <div class="title small">shows blog</div>
                 </div>
             </footer>
